# nora

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  MILESTONE_v0.4.1.md  README.md  ROADMAP.md  benchmark_indexer.py  config_manager.py  hatch_hooks.py  nora.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
core/: tool_interpreter.py  tools.py  vector_store.py
docs/: API.md  Actions.md  Agents.md  Config.md  Contributing.md  Overview.md  Teams.md  Testing.md  Tools.md
nora/: __init__.py  cli.py  tui.py
nora/api/: __init__.py  server.py
nora/core/: __init__.py  actions.py  chat.py  config.py  history.py  indexer.py  interpreter.py  orchestrator.py  plugins.py  setup.py  tool_interpreter.py  tools.py  utils.py  vector_store.py
nora/plugins/: __init__.py  greeter.py
nora/tools/append_file/: main.py  tool.json
nora/tools/create_file/: main.py  tool.json
nora/tools/delete_file/: main.py  tool.json
nora/tools/read_file/: main.py  tool.json
nora/tools/shell/: main.py  tool.json
tests/: __init__.py  test_api.py  test_chat.py  test_cli_commands.py  test_config.py  test_history.py  test_indexer.py  test_orchestrator.py  test_plugins.py  test_setup.py  test_vector_store.py
